recursion.lessons.recursion.koch.Koch.scala.error
Koch:2: error: ':' expected but ',' found.
def snowFlake(levels, length){
                    ^Koch:29: error: identifier expected but '}' found.
} 
^Koch:32: error: expected start of definition
	override def run() {
                 ^Koch:35: error: Unmatched closing brace '}' ignored here
}
^